# cppyy-backend

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cling/: create_src_directory.py
cling/patches/: build.diff  clingcallfunc.diff
cling/python/cppyy_backend/: loader.py
cling/src/cmake/modules/: RootMacros.cmake
cling/src/core/base/src/: TROOT.cxx
cling/src/core/dictgen/src/: rootcling_impl.cxx
cling/src/core/metacling/src/: CMakeLists.txt  TCling.h  TClingCallFunc.cxx
clingwrapper/src/: clingwrapper.cxx  cpp_cppyy.h  gcling.h  interop.cxx
include/: cpp_cppyy.h
patches/llvm/: clang16-D148435-WeakRefs.patch
python/cppyy_backend/: loader.py
src/: clingwrapper.cxx
